compile_server/temp/1690968260822_2.compile_error
./temp/1690968260822_2.cpp: In member function ‘int Solution::Max(const std::vector<int>&)’:
./temp/1690968260822_2.cpp:13:19: error: ‘INT_MIN’ was not declared in this scope
         int ret = INT_MIN;
                   ^
